[java] add JVM memory & GC