@@ -4,24 +4,128 @@
 1. JVM in `System`
    - `static void exit(int status)`
    - `static void gc()` — run garbage collector
-   - `static SecurityManager getSecurityManager()`
    - `static Channel inheritedChannel()` — the channel inherited from the entity that created this Java virtual machine
    - `static void load(String filename)`
    - `static void loadLibrary(String libname)`
    - `static String mapLibraryName(String libname)`
    - `static void runFinalization()`
+   - `static SecurityManager getSecurityManager()`
    - `static void setSecurityManager(SecurityManager s)`
 
-1. security manager — `SecurityManager`
-   - usage — no security manager installed by default, use by `System::setSecurityManager`, or CLI option `-Djava.security.manager`
-   - permission checking — `SecurityException`
-   - security policy, `java.security.Policy` — code sources to permission sets, `java.security.Permission`
-     - protection domain — tbd
-     - policy files — tbd
-       - system property — `java.security.policy`, double equals sign (`==`) to exclude other standard policy files
-   - Java Authentication and Authorization Service (JAAS) — `javax.security.auth.login.LoginContext`, tbd
-     - login policies
-   - tbd
+## Memory
+
+1. threads
+   - system threads, besides the main thread
+     - VM thread -- waits for operations to appear that require the JVM to reach a safe-point where modifications to the heap can not occur; operations are "stop-the-world" garbage collections, thread stack dumps, thread suspension and biased locking revocation
+     - period task thread -- responsible for timer events (i.e. interrupts) that are used to schedule execution of periodic operations
+     - GC thread -- literally
+     - compiler thread -- JIT
+     - signal dispatcher thread -- receives signals sent to the JVM process and handle them inside the JVM by calling the appropriate JVM methods
+   - errors -- `StackOverflowError`, `OutOfMemoryError` for frames
+
+1. memory model per thread
+   - program counter (PC) -- address of the current instruction (or opcode), or undefined if the current method is native, typically incremented after each instruction; pointing at a memory address in the Method Area
+   - native stack -- for JNI
+   - stack -- LIFO queue for frames for each method executing on the thread; no direct manipulation except pop and push, so frame objects may be allocated in the Heap and the memory does not need to be contiguous
+     - CLI -- `-Xss`, e.g. `-Xss64m`
+   - frame -- element in stack, fixed size after creation
+     - local variable array -- containing `this` if not static, method parameters and local variables (primitive types, reference and return address)
+     - return value
+     - operand stack -- analogous to general purpose registers used in CPU; most JVM byte code spends its time manipulating the operand stack by pushing, popping, duplicating, swapping, or executing operations that produce or consume values, as well as move values between the local variable array and the operand stack
+     - reference to runtime constant pool for the class of the current method -- references to variables and methods compiled as symbolic references stored in the class's constant pool
+       - binding -- the process of the field, method or class identified by the symbolic reference being completely replaced by a direct reference
+
+1. memory model shared between threads
+   - heap -- where objects allocated
+     - young generation
+       - Eden
+       - survivor
+       - CLI -- `-Xmn`, `-XX:SurvivorRatio=8`
+     - old (or tenure) generation
+     - CLI -- `-Xms` for initial value, `-Xmx` for max value
+   - permanent generation (removed since JDK 8), allocated as part of contiguous memory as the Java heap
+     - interned strings (string table), can be explicitly interned by `String::intern`, moved to heap since JDK 8
+       - CLI -- `-XX:+PrintStringTableStatistics`
+     - method area -- must be thread-safe
+       - class loader reference
+       - runtime constant pool -- numeric constants - field references - method references - attributes
+       - class info
+         - field data -- name - type - modifiers - attributes
+         - method data -- name - return type - parameter types (in order) - modifiers - attributes
+         - method code
+           - bytecodes
+           - operand stack size - local variable size - local variable table
+           - exception table
+             - per exception handler -- start point - end point - PC offset for handler code - constant pool index for exception class being caught
+   - metaspace, replacement for permanent generation since JDK 8
+     - held in native memory and not related to heap -- PermGen had a fixed size, but `MaxMetaspaceSize` defaults to infinity, no more `java.lang.OutOfMemoryError: Permgen space` (`OutOfMemoryError` for metaspace is still possible)
+     - GC -- triggered once the `MaxMetaspaceSize` is reached
+     - CLI -- `-XX:MetaspaceSize`, `-XX:MaxMetaspaceFreeRatio`, `-XX -- MinMetaspaceFreeRatio`, `-XX -- MaxMetaspaceSize`
+   - code cache -- for JIT
+     - CLI -- `-XX:ReservedCodeCacheSize=128m`, `-XX:InitialCodeCacheSize`
+   - `sun.nio.ch.DirectBuffer` -- use native methods to manipulate non-heap memory, read and write directly to a memory address, used in NIO
+
+1. GC
+   - GC target detection
+     - reference count -- not used by JVM due to circular reference
+     - reachability detection -- DFS from GC roots
+       - 自救 -- make the object reachable in `Object::finalize`, 自救只能进行一次，`Object::finalize` will not be called twice
+       - necessity when unload a class in permanent generation or metaspace -- instances and class loader of this class garbage collected, no `Class` instance reference
+   - memory management strategies
+     - `new` objects -- created in young generation
+     - minor GC -- GC in young generation, move alive objects from Eden to survivor
+     - major GC -- typically pause the application threads, GC in both generations and also permanent generation
+       - trigger -- old or permanent generation is full; and more
+   - GC algorithm
+     - mark sweep
+       - steps
+         - mark -- mark reachable objects, stop-the-world
+         - sweep -- collected the unmarked and erase marks, merge if contiguous to the previous free block, freed space added to a single linked list called free list
+       - free list -- searched when allocate new objects to find enough space
+       - disadvantages -- segmentation; low performance
+     - mark compact
+       - compact -- move active objects to one end, no segmentation but stop-the-world
+     - mark copy -- divide memory into two regions
+       - copy -- copies all alive objects to the other region
+     - mark copy in HotSpot -- Eden:survivor defaults to 8:(1 + 1), copy from Eden and one survivor to the other survivor, if not enough space, move to tenure generation
+     - hybrid -- mark copy for young generation, mark sweep or compact for tenure generation
+
+1. garbage collectors
+   - categorization
+     - for young generation -- serial, ParNew, parallel scavenge, G1
+     - for tenure generation -- CMS, serial old (MSC), parallel old, G1
+     - stop-the-world -- above all except CMS and G1
+     - combination of young and tenure
+       - serial -- serial old, CMS
+       - ParNew -- serial old, CMS
+       - parallel scavenge -- serial old, parallel old
+   - CLI
+     - `-XX:+UseSerialGC` -- 在新生代和老年代使用串行收集器
+     - `-XX:+UseParNewGC` -- 在新生代使用并行收集器
+     - `-XX:+UseParallelGC` -- 新生代使用并行回收收集器，更加关注吞吐量
+     - `-XX:+UseParallelOldGC` -- 老年代使用并行回收收集器
+     - `-XX:ParallelGCThreads` -- 设置用于垃圾回收的线程数
+     - `-XX:+UseConcMarkSweepGC` -- 新生代使用并行收集器，老年代使用CMS+串行收集器
+     - `-XX:ParallelCMSThreads` -- 设定CMS的线程数量
+     - `-XX:ConcGCThreads` -- 并发回收垃圾的线程。默认是总核数的12.5%，8核CPU默认是1。调大后GC变快，但会占用程序运行时的CPU资源，吞吐会受到影响。
+     - `-XX:+UseG1GC` -- 启用G1垃圾回收器
+     - `-XX:+UnlockExperimentalVMOptions` `-XX:+UseZGC` -- 启用ZGC
+       - `-XX:ZCollectionInterval` -- ZGC发生的最小时间间隔，单位秒
+       - `-XX:ZAllocationSpikeTolerance` -- ZGC触发自适应算法的修正系数，默认2，数值越大，越早的触发ZGC
+       - `-XX:+UnlockDiagnosticVMOptions` `-XX:-ZProactive` -- 是否启用主动回收，默认开启，这里的配置表示关闭。
+     - `-Xlog` -- 设置GC日志中的内容、格式、位置以及每个日志的大小
+       ```
+       -Xlog:safepoint,classhisto*=trace,age*,gc*=info:file=/opt/logs/logs/gc-%t.log:time,tid,tags:filecount=5,filesize=50m
+       -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:/home/logs/gc.log
+       ```
+   - serial -- mark-copy, default GC for young generation in client scenario, single thread, about 100ms for 100 to 200M garbage
+     - serial old -- serial GC for tenure generation, mark-compact, can serve as backup for CMS
+   - ParNew -- serial GC but multithread, default GC for young generation in server scenario
+   - parallel scavenge -- similar to ParNew, but throughput first in contrast to minimizing pause time, better UX being more responsive with small pause time although smaller young generation and more frequent GC
+     - parallel old -- parallel scavenge for tenure generation
+     - GC ergonomics -- with `-XX:+UseAdaptiveSizePolicy`, 不需要手工指定新生代的大小（-Xmn）、Eden 和 Survivor 区的比例、晋升老年代对象年龄等细节参数了。JVM 会根据当前系统的运行情况收集性能监控信息，动态调整这些参数以提供最合适的停顿时间或者最大的吞吐量, `-XX:AdaptiveSizePolicyOutputInterval=1` for logging
+   - ZGC
+   - shenandoah
 
 ## Reference
 
@@ -31,9 +135,15 @@
    ```
    - `T get()`
    - `void clear()`
-   - `boolean enqueue()` -- Adds this reference object to the queue with which it is registered, if any, by the program or by the garbage collector
+   - `boolean enqueue()` -- adds this reference object to the queue with which it is registered, if any, only by the program (GC can enqueue references without invoking this method, typically clear referents simultaneously)
    - `boolean isEnqueued()`
    - notification of changes in an object's reachability -- by registering an appropriate reference object with a reference queue at the time the reference object is created
+   - reachability: an object is
+     - strongly reachable -- if it can be reached by some thread without traversing any reference objects. A newly-created object is strongly reachable by the thread that created it.
+     - softly reachable -- if it is not strongly reachable but can be reached by traversing a soft reference
+     - weakly reachable -- if it is neither strongly nor softly reachable but can be reached by traversing a weak reference. When the weak references to a weakly-reachable object are cleared, the object becomes eligible for finalization.
+     - phantom reachable -- if it is neither strongly, softly, nor weakly reachable, it has been finalized, and some phantom reference refers to it
+     - unreachable -- if it is not reachable in any of the above ways, eligible for reclamation
    - package private constructor for override
      - `Reference(T referent)`
      - `Reference(T referent, ReferenceQueue<? super T> queue)` -- registered with the given queue
@@ -50,22 +160,61 @@
 1. `java.lang.ref.WeakReference<T>` — weak reference objects, which do not prevent their referents from being made finalizable, finalized, and then reclaimed; next GC
    - use -- weak references are for implementing canonicalizing mappings that do not prevent their keys (or values) from being reclaimed
 
-1. `java.lang.ref.PhantomReference<T>` -- phantom references are not automatically cleared by GC as they are enqueued. An object that is reachable via phantom references will remain so until all such references are cleared or themselves become unreachable
-   - use -- for scheduling pre-mortem cleanup actions in a more flexible way than is possible with the Java finalization mechanism
+1. `java.lang.ref.PhantomReference<T>` -- enqueued after the collector determines that their referents may otherwise be reclaimed
+   - referent GC point
+     - before Java 9 -- unlike soft and weak references, phantom references are not automatically cleared by the GC as they are enqueued; an object that is reachable via phantom references will remain so until all such references are cleared or themselves become unreachable
+     - since Java 9 -- when phantom reachability detected, GC will atomically clear all phantom references to that object and all phantom references to any other phantom-reachable objects from which that object is reachable. At the same time or at some later time it will enqueue those newly-cleared phantom references that are registered with reference queues
+   - use -- a better `Object::finalize` hook: for scheduling pre-mortem cleanup actions in a more flexible way than is possible with the Java finalization mechanism
+   - `Object::finalize` drawbacks
+     - 实例执行垃圾回收的周期更长，性能更低
+     - 单线程执行，因此在实例数目较多的情况下可能引起阻塞
+     - 会被子类所继承，在子类未知的情况下，影响子类的垃圾回收性能
+     - 不当的重载会导致原本已经"死亡"的实例"复活"
    - `get()` -- always return `null` to ensure that a reclaimable object remains so
 
-1. `java.lang.ref.ReferenceQueue<T>` -- to which registered reference objects are appended by GC, at the same time or at some later time after the appropriate reachability changes are detected
+1. `java.lang.ref.ReferenceQueue<T>` -- to which registered reference objects are appended by GC, at the same time or at some later time after detecting the reachability of the referent has changed to the value corresponding to the type of the reference
+   - implementation -- linked list, by `head` field, `next` field in `Reference`, and flags in `Reference`
    - `Reference<? extends T> poll()` -- non-block
    - `Reference<? extends T> remove()` -- block
    - `Reference<? extends T> remove(long timeout)`
 
 ## Class Loading
 
+1. class file structure -- tbd
+   ```
+   ClassFile {
+       u4                magic;
+       u2                minor_version;
+       u2                major_version;
+       u2                constant_pool_count;
+       cp_info           contant_pool[constant_pool_count – 1];
+       u2                access_flags;
+       u2                this_class;
+       u2                super_class;
+       u2                interfaces_count;
+       u2                interfaces[interfaces_count];
+       u2                fields_count;
+       field_info        fields[fields_count];
+       u2                methods_count;
+       method_info       methods[methods_count];
+       u2                attributes_count;
+       attribute_info    attributes[attributes_count];
+   }
+   ```
+   - CLI -- `javap -v -p -s -sysinfo -constants`
+   - [ref](https://blog.jamesdbloom.com/JVMInternals.html)
+
 1. class loading
    - class loading process — only classes needed for execution loaded, using the class loader of the method caller
-     - load main program from disk or web
-     - resolving — load fields or superclasses of another class type of the main program class
-     - load classes required as the `main` method executes
+     - loading -- load binary stream from disk or web into structures in method area and generate a `Class` instance for the class
+     - link
+       - verifying -- check semantics and safety like `final`, `private` and variable types, etc.
+         - bytecode verification — bytecode, except system classes, verified for safety before loaded into JVM
+         - turn off on CLI — `-noverify` (or `-Xverify:none`)
+       - preparing -- memory allocation for JVM, like method tables; static fields populated in method area
+       - resolving — replace symbolic references with direct references
+         - dynamic binding -- resolving can happen after initializing for dynamic binding purposes
+     - initializing -- execute `<clinit>()` for assignments of non-`final` static fields and static blocks
    - class loaders
      - The bootstrap class loader — loads the system classes (typically, from the JAR file `rt.jar`, modules from JDK 9)
        - usually implemented in C — as an integral part of the virtual machine, no `ClassLoader` object involved, `String.class.getClassLoader()` is `null`
@@ -87,8 +236,7 @@
      - class loader inversion — the phenomenon when loading classes programmatically, classes to load are not visible to default class loaders, can be solved by using context class loader
    - class loaders as namespaces — in JVM, a class is determined by its full name **and** the class loader
      - useful for loading code from multiple sources, hot deployment etc.
-   - bytecode verification — bytecode, except system classes, verified for safety before loaded into JVM
-     - turn off on CLI — `-noverify` (or `-Xverify:none`)
+   - Class Data Sharing (CDS) -- share common classes across different JVM instances and improve JVM start speed
 
 1. `ClassLoader`
    ```java
